Pretty render the response choices

--- a/public/index.html
+++ b/public/index.html
@@ -368,6 +368,90 @@
     .tool-params pre {
       background: white;
     }
+
+    .message-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 12px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid #e1e4e8;
+    }
+
+    .choice-content {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .choice-field {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .choice-label {
+      font-weight: 600;
+      color: #586069;
+      font-size: 12px;
+    }
+
+    .choice-value {
+      font-size: 13px;
+      color: #24292e;
+    }
+
+    .choice-value pre {
+      margin: 0;
+      padding: 8px;
+      font-size: 12px;
+    }
+
+    .message-content .info-row {
+      margin-bottom: 8px;
+    }
+
+    .message-content .info-row:last-child {
+      margin-bottom: 0;
+    }
+
+    .message-content .info-label {
+      font-weight: 600;
+      color: #586069;
+      font-size: 12px;
+      margin-bottom: 4px;
+    }
+
+    .message-content .info-value {
+      font-size: 13px;
+      color: #24292e;
+    }
+
+    .message-content .info-value pre {
+      margin: 0;
+      padding: 8px;
+      font-size: 12px;
+    }
+
+    .tool-meta {
+      font-size: 12px;
+      color: #586069;
+      margin-bottom: 4px;
+    }
+
+    .tool-args {
+      margin-top: 8px;
+    }
+
+    .tool-args strong {
+      font-size: 12px;
+      color: #586069;
+    }
+
+    .tool-args pre {
+      margin-top: 4px;
+      background: white;
+    }
   </style>
 </head>
 <body>
