--- a/public/index.html
+++ b/public/index.html
@@ -306,6 +306,9 @@
     }
 
     .message-role {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       color: #0366d6;
       font-weight: 600;
       margin-bottom: 8px;
@@ -348,10 +351,21 @@
     }
 
     .tool-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       color: #0366d6;
       font-weight: 600;
       margin-bottom: 8px;
       font-size: 13px;
+    }
+
+    .tool-id {
+      font-size: 11px;
+      font-weight: normal;
+      color: #586069;
+      font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
+      text-transform: none;
     }
 
     .tool-description {
@@ -366,6 +380,30 @@
     }
 
     .tool-params pre {
+      background: white;
+    }
+
+    .tool-result-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #0366d6;
+      font-weight: 600;
+      margin-bottom: 8px;
+      font-size: 13px;
+    }
+
+    .tool-result-content {
+      margin-top: 8px;
+    }
+
+    .tool-result-content strong {
+      font-size: 12px;
+      color: #586069;
+    }
+
+    .tool-result-content pre {
+      margin-top: 4px;
       background: white;
     }
 
