--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,93 @@
       color: rgba(255,255,255,0.8);
     }
 
+    .filter-header {
+      position: sticky;
+      top: 0;
+      padding: 12px;
+      background: #f6f8fa;
+      border-bottom: 1px solid #e1e4e8;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 13px;
+      z-index: 10;
+    }
+
+    .filter-header label {
+      font-weight: 600;
+      color: #24292e;
+    }
+
+    .filter-dropdown {
+      position: relative;
+      flex: 1;
+    }
+
+    .filter-button {
+      width: 100%;
+      padding: 6px 12px;
+      background: white;
+      border: 1px solid #d0d7de;
+      border-radius: 6px;
+      font-size: 13px;
+      color: #24292e;
+      cursor: pointer;
+      text-align: left;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .filter-button:hover {
+      background: #f6f8fa;
+    }
+
+    .dropdown-arrow {
+      font-size: 10px;
+      color: #586069;
+    }
+
+    .filter-options {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      margin-top: 4px;
+      background: white;
+      border: 1px solid #d0d7de;
+      border-radius: 6px;
+      box-shadow: 0 8px 24px rgba(140, 149, 159, 0.2);
+      max-height: 300px;
+      overflow-y: auto;
+      z-index: 1000;
+    }
+
+    .filter-option {
+      padding: 8px 12px;
+      border-bottom: 1px solid #e1e4e8;
+    }
+
+    .filter-option:last-child {
+      border-bottom: none;
+    }
+
+    .filter-option label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      font-weight: normal;
+    }
+
+    .filter-option input[type="checkbox"] {
+      cursor: pointer;
+    }
+
+    .filter-option:hover {
+      background: #f6f8fa;
+    }
+
     .details {
       flex: 1;
       display: flex;
