Show reasoning text in response

--- a/public/index.html
+++ b/public/index.html
@@ -558,7 +558,7 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 12px;
-      padding-bottom: 8px;
+      padding: 12px 12px 8px 12px;
       border-bottom: 1px solid #e1e4e8;
     }
 
@@ -566,6 +566,7 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
+      padding: 0 12px 12px 12px;
     }
 
     .choice-field {
