navigate between the tool calls and tool results

--- a/public/index.html
+++ b/public/index.html
@@ -504,6 +504,16 @@
       text-transform: none;
     }
 
+    .tool-id-link {
+      cursor: pointer;
+      color: #0366d6;
+    }
+
+    .tool-id-link:hover {
+      color: #0256a6;
+      text-decoration: underline;
+    }
+
     .tool-description {
       color: #586069;
       font-size: 13px;
