--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,58 @@
       color: white;
       padding: 15px 20px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
     .header h1 {
       font-size: 20px;
       font-weight: 600;
+    }
+
+    .header-upload {
+      display: none;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .header-upload.visible {
+      display: flex;
+    }
+
+    .header-drop-zone {
+      border: 2px dashed #6a737d;
+      border-radius: 6px;
+      padding: 10px 30px;
+      cursor: pointer;
+      transition: all 0.3s;
+      background: rgba(255, 255, 255, 0.1);
+      min-width: 250px;
+      text-align: center;
+    }
+
+    .header-drop-zone:hover {
+      border-color: #0366d6;
+      background: rgba(3, 102, 214, 0.1);
+    }
+
+    .header-drop-zone.dragover {
+      border-color: #0366d6;
+      background: rgba(3, 102, 214, 0.2);
+      border-style: solid;
+    }
+
+    .header-drop-zone p {
+      font-size: 14px;
+      margin: 0;
+      color: #d1d5da;
+    }
+
+    .header-drop-zone .hint {
+      font-size: 12px;
+      color: #959da5;
+      margin-top: 4px;
     }
 
     .drop-zone {
@@ -642,6 +689,12 @@
 <body>
   <div class="header">
     <h1>Copilot Log Visualizer</h1>
+    <div class="header-upload" id="headerUpload">
+      <div class="header-drop-zone" id="headerDropZone">
+        <p>📁 Drag & drop or click to upload another log</p>
+      </div>
+      <input type="file" id="headerFileInput" accept=".jsonl" style="display: none;">
+    </div>
   </div>
 
   <div class="drop-zone" id="dropZone">
