adjust the tool card style to make it consistent with the message card

--- a/public/index.html
+++ b/public/index.html
@@ -529,6 +529,10 @@
       background: #fafbfc;
     }
 
+    .tool-item.collapsible {
+      padding: 0;
+    }
+
     .tool-item:last-child {
       margin-bottom: 0;
     }
@@ -545,18 +549,26 @@
 
     .tool-header.collapsible-header {
       cursor: pointer;
-      padding: 8px 0;
-      margin: -8px 0;
+      padding: 12px;
+      margin-bottom: 0;
       justify-content: flex-start;
-      gap: 8px;
     }
 
     .tool-header.collapsible-header:hover {
       background: rgba(3, 102, 214, 0.05);
     }
 
-    .tool-item.collapsed .tool-header {
-      margin-bottom: 0;
+    .tool-header .toggle-icon {
+      margin-right: 4px;
+      font-size: 10px;
+    }
+
+    .tool-body {
+      padding: 0 12px 12px 12px;
+    }
+
+    .tool-item.collapsed .tool-body {
+      display: none;
     }
 
     .tool-id {
